# C-Class-Game

./: .gitignore  CMakeLists.txt  CREDITS.md  README.md  build.ps1  build.sh  game.cpp  levels.txt  move.cpp  stealth_game
include/: Board.h  Guard.h  GuardMovementStrategies.h  Movable.h  MusicManager.h  Player.h  Screen.h  Utils.h
src/: board.cpp  game.cpp  guard_movement_strategies.cpp  levels.txt  menu_screens.cpp  move.cpp  music_manager.cpp  tutorial.cpp  utils.cpp
